--- a/app/src/radioZamaneh/res/values-fa/strings.xml
+++ b/app/src/radioZamaneh/res/values-fa/strings.xml
@@ -1,37 +1,37 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="app_name">پیک</string>
-    <string name="app_description">پیک، یک برنامه خبرخوان و خبرفرستی امن است که به شما امکان می‌دهد درباره اخبار، با افراد دیگر گفت‌وگو کنید.</string>
-    <string name="title_activity_login"></string>
-    <string name="title_activity_logout"></string>
-    <string name="story_list_hint_no_shared_text1">این فهرستی است از گزارش‌هایی که به شیوه به‌اشتراک‌گذاری امن «پیک» با شما به اشتراک گذاشته شده‌اند:</string>
+    <string name="app_description">پیک، یک برنامه خبرخوان و خبرفرستی امن است که به شما امکان می‌دهد درباره اخبار، با افراد دیگر گفت‌وگو کنی</string>
+    <string name="title_activity_login">ورود</string>
+    <string name="title_activity_logout">خروج</string>
+    <string name="story_list_hint_no_shared_text1">این فهرستی است از گزارش‌هایی که به شیوه به‌اشتراک‌گذاری امن «پیک» با شما به اشتراک گذاشته شده‌</string>
     <string name="help_title">درباره پیک</string>
-    <string name="help_wipe_content">برای پاک‌کردن همه اطلاعات شخصی خود از «پیک»، دکمه «هراس» را بزنید. در تنظیمات این برنامه می‌توانید جوری تنظیم کنید که با زدن دکمه «هراس»، کل برنامه حذف شود.‏</string>
-    <string name="help_share_content">گزارش‌ها، خوراک و کل برنامه را با استفاده از امکان به‌اشتراک‌گذاری امن پیک به اشتراک بگذارید. این روش، امن و ساده است و فقط کافی است یکی از دوستانتان در نزدیکی شما باشد و بلوتوث دستگاهش را روشن کند. برای به‌اشتراک‌گذاشتن برنامه، لازم است که یک شبکه وای‌فای یا یک هات‌اسپات داشته باشید.</string>
-    <string name="help_data_content">ترفندهایی برای کاهش استفاده شما از دیتا:\n\n۱. فقط خوراک‌هایی را سینک کنید که برایتان مهم است. پیک به شما اجازه می‌دهد خوراک‌ها را تک به تک سینک کنید. \n\n۲. حالت «استفاده صرفه‌جویانه» را در تنظیمات انتخاب کنید. با این شیوه فقط متن را سینک می‌کنید و البته همچنان می‌توانید در هر گزارش، عکس‌ها را هم دریافت کنید.\n\n۳. طوری تنظیم کنید که مطالب قدیمی به شکل دوره‌ای، منقضی شوند. دوره زمانی آن را در تنظیمات خود انتخاب کنید.</string>
-    <string name="about_zamaneh_title"></string>
-    <string name="about_zamaneh_content"></string>
-    <string name="help_terms_content"></string>
-    <string name="menu_help">درباره پیک</string>
-    <string name="menu_font_size_increase">Make text larger</string>
-    <string name="menu_font_size_decrease">Make text smaller</string>
-    <string name="post_sign_in_info">پیک، خوراکی از اخبار ارزشمند را به کاربرانش ارائه می‌دهد. هر نوشته که در پیک ایجاد شود، از یک روند به‌سازی می‌گذرد تا در خوراک خبری رسمی پیک به اشتراک گذاشته شود. لطفا «شرایط و مقررات» را بخوانید (روی «درباره پیک» کلیک کند و سپس «شرایط و گواهی‌های نرم‌افزار») تا در جریان باشید با به‌اشتراک‌گذاشتن اطلاعات با پیک، چه حقوقی را واگذار می‌کنید.‏</string>
-    <string name="httpd_app_sender_instructions">برای به‌اشتراک‌گذاشتن برنامه پیک یا برنامه‌های مورد حمایت آن (اوربوت و ChatSecure) بدون استفاده از اینترنت، لطف این اقدامات را انجام دهید:‏</string>
+    <string name="help_wipe_content">برای از بین بردن اطلاعات شخصی‌تان در رادیو زمانه از دکمه هراس استفاده کنید. می‌توانید از این دکمه برای از بین بردن کل برنامه استفاده کنید.</string>
+    <string name="help_share_content">با استفاده از رادیو زمانه اخبار و گزارش‌های برنامه را با دیگران به اشتراک بگذارید. این برنامه امن و ساده است و تنها لازم است دوستی دور و برتان باشد که بلوتوث داشته باشد. این برنامه به شکه وای فای نیاز دارد.</string>
+    <string name="help_data_content">توصیه‌هایی برای کاهش مصرف دیتا: ۱- تنها فیدهایی را که برایستان مهم هستند دربافت کنید. رادیو زمانه به شما امکان می‌دهد که فیدهای شخصی را هم تنظیم کنید. ۲- در بخش تنظیمات خود، گزینه همگام سازی - سینک- هوشمند را انتخاب کنید. این گزینه تنها متن‌ها را سینک می‌کند و امکان لود کردن عکس‌های گزارش را هم به شما می‌دهد. ۳- مقاله‌ها را پس از مدتی حدف کنید. می‌توانید زمانبندی حذف مطالب قدیمی را در بخش تنظیمات فعال کنید.  </string>
+    <string name="about_zamaneh_title">درباره پیک</string>
+    <string name="about_zamaneh_content">رادیو زمانه از سال ۲۰۰۷ بر بالابردن آگاهی عمومی درباره دموکراسی و حقوق بشر در ایران تمرکز کرده است. ما به دنبال یک جامعه مدنی آگاه، تحصیل‌کرده و قدرتمند هستیم که بتواند برای ایجاد تغییرات اقدام کند و به خشونت و نقض حقوق بشر در ایران پایان دهد.</string>
+    <string name="help_terms_content">مجوز نرم افزار و اطلاعات بیشتر به صورت آنلاین در: https://guardianproject.info/apps/ در دسترس است.</string>
+    <string name="menu_help">درباره رادیو زمانه</string>
+    <string name="menu_font_size_increase">متن را بلندتر کن</string>
+    <string name="menu_font_size_decrease">متن را کوتاه تر کن</string>
+    <string name="post_sign_in_info">رادیو زمانه، فیدهای اخبار مهم و قابل توجه جامعه را فراهم می‌کند. هر پستی که به وسیله رادیو زمانه تولید شده باشد، قبل از اینکه در نیورفید رسمی رادیو زمانه منتشر شود، روند گزینش را طی می‌کند. لطفا بخش شرایط و اصول کاری رادیو زمانه را ببینید(درباره رادیو زمانه و شرایط و ضوابط کار) تا از حقوق خود در انتشار اطلاعات در رادیو زمانه آگاه شوید.</string>
+    <string name="httpd_app_sender_instructions">برای به اشتراک گذاشتن رادیو زمانه یا برنامه‌هایی که به وسیله آن ساپورت می‌شوند، مثل اوربوت و چت امن، با افراد دور و برتان، مراحل زیر را طی کنید:</string>
     <string name="bluetooth_send_info">دوست شما باید برنامه «پیک» را باز کند و روی «دریافت» در منو کناری کلیک کند.</string>
-    <string name="bluetooth_receive_title">دریافت یک گزارش یا یک خوراک از دوستتان با استفاده از امکان به‌اشتراک‌گذاری امن «پیک».‏</string>
+    <string name="bluetooth_receive_title">دریافت یک گزارش یا یک خوراک از دوستتان با استفاده از امکان به‌اشتراک‌گذاری امن «پیک</string>
     <string name="create_account_title">نام خود را در پیک انتخاب کنید</string>
-    <string name="story_list_hint_tor_title">به خوراک خبری خود در پیک خوش آمدید.‏</string>
-    <string name="radio_play">Play Radio</string>
-    <string name="radio_loading">Loading...</string>
-    <string name="radio_stop">Stop Radio</string>
-    <string name="media_status_error">Error retrieving media</string>
-    <string name="media_status_created">Requesting media</string>
-    <string name="media_status_queued">Requesting media</string>
-    <string name="media_status_loading">Retrieving media</string>
-    <string name="media_status_loaded">Media ready</string>
-    <string name="media_status_cancelled">Request cancelled</string>
-    <string name="media_status_minutes">%d minutes</string>
-    <string name="pulldown_to_sync_no_net">Connect to the Internet to sync your news</string>
-    <string name="pulldown_to_sync">Pull down to sync your news</string>
-    <string name="pulldown_to_sync_syncing">Syncing your news...</string>
+    <string name="story_list_hint_tor_title">به خوراک خبری خود در پیک خوش آمدید.</string>
+    <string name="radio_play">رادیو را پخش کن</string>
+    <string name="radio_loading">در حال بارگذاری</string>
+    <string name="radio_stop">پخش رادیو را متوقف کن</string>
+    <string name="media_status_error">اشکال در درخواست رسانه</string>
+    <string name="media_status_created">در خواست رسانه</string>
+    <string name="media_status_queued">در خواست رسانه</string>
+    <string name="media_status_loading">در خواست رسانه</string>
+    <string name="media_status_loaded">رسانه آماده است</string>
+    <string name="media_status_cancelled">درخواست کنسل شد</string>
+    <string name="media_status_minutes">%d دقیقه</string>
+    <string name="pulldown_to_sync_no_net">به اینترنت وصل شو و اخبار را دریافت کن.</string>
+    <string name="pulldown_to_sync">پایین بکش و اخبار را دریافت کن</string>
+    <string name="pulldown_to_sync_syncing">دریافت اخبار</string>
 </resources>
