Added new translations

--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -118,7 +118,10 @@
   <string name="add_feed_collapse">بستن</string>
   <string name="add_feed_not_loaded">اطلاعات خوراک، دریافت نشد</string>
   <string name="add_feed_error_loading">نتوانستیم این خوراک را بگیریم. بررسی کنید که آدرس خوراک RSS صحیح است.‏</string>
+  <string name="settings_heading_proxy">پروکسی</string>
   <string name="settings_tor_require">نیاز به تور</string>
+  <string name="settings_proxy_tor">تور</string>
+  <string name="settings_proxy_none">بدون پروکسی</string>
   <string name="settings_heading_chat">گپ</string>
   <string name="settings_gibberbot_connected">حساب ChatSecure وصل شد</string>
   <string name="settings_heading_panic_action">حالت هراس</string>
@@ -126,6 +129,7 @@
   <string name="settings_panic_wipe_app">پاک‌کردن کل برنامه</string>
   <string name="settings_panic_wipe_content">پاک‌کردن محتوای من</string>
   <string name="settings_heading_login">ورود</string>
+  <string name="settings_enable_screenshots">فعال کردن اسکرین شات‌ها</string>
   <string name="settings_security_launch">الزامات آغاز برنامه</string>
   <string name="settings_security_launch_require_passphrase">عبارت رمز</string>
   <string name="settings_security_launch_require_none">هیچ‌کدام</string>
