Added new info section to help

--- a/app/src/radioZamaneh/res/values-fa/strings.xml
+++ b/app/src/radioZamaneh/res/values-fa/strings.xml
@@ -35,4 +35,6 @@
     <string name="pulldown_to_sync_no_net">به اینترنت وصل شو و اخبار را دریافت کن.</string>
     <string name="pulldown_to_sync">پایین بکش و اخبار را دریافت کن</string>
     <string name="pulldown_to_sync_syncing">دریافت اخبار</string>
+    <string name="help_rz_info_title">به آخرین نسخه اپلیکیشن زمانه خوش آمدید!</string>
+    <string name="help_rz_info_content">در ماه‌های گذشته، ما مشغول آماده سازی نسخه جدید اپلیکیشن بوده ایم که شامل امکانات امنیتی بی شماری مثل رمز گذاری دو سویه، ایجاد دکمه حذف اضطراری اپلیکیشن و موارد بسیار دیگری است و در روند برنامه نویسی، بیش از هر چیز به امنیت کاربران و ایجاد یک ارتباط امن فکر کرده ایم. استفاده از این امکانات ممکن است که در موارد اندکی سرعت برنامه را کاهش دهد. بابت این مساله، از شما پوزش می خواهیم و از این که کاربر زمانه هستید به خود می بالیم!</string>
 </resources>
