New icon and new help text

--- a/app/src/radioZamaneh/res/values-fa/strings.xml
+++ b/app/src/radioZamaneh/res/values-fa/strings.xml
@@ -6,13 +6,30 @@
     <string name="title_activity_logout">خروج</string>
     <string name="story_list_hint_no_shared_text1">این فهرستی است از گزارش‌هایی که به شیوه به‌اشتراک‌گذاری امن «پیک» با شما به اشتراک گذاشته شده‌</string>
     <string name="help_title">درباره پیک</string>
-    <string name="help_wipe_content">برای از بین بردن اطلاعات شخصی‌تان در رادیو زمانه از دکمه هراس استفاده کنید. می‌توانید از این دکمه برای از بین بردن کل برنامه استفاده کنید.</string>
+    <string name="help_tor_title">با استفاده از تور، آنلاین شوید</string>
+    <string name="help_tor_content">تور، یک شبکه باز است که کمک می‌کند در فضای آنلاین، در امان بمانید. این
+شبکه در مقابل شنود که تهدید آزادی شخصی و حریم خصوصی است، از شما محافظت
+می‌کند.       شما می‌توانید از طریق برنامه «اوربات» به شبکه تور وصل شوید
+که اپلیکشن زمانه به صورت پیش‌فرض از آن استفاده می‌کند. فقط کافی‌ست که آن
+را از قسمت تنظیمات فعال کنید.</string>
+    <string name="help_wipe_title">برنامه را به‌سرعت حذف کنید</string>
+    <string name="help_wipe_content">ممکن است در شرایطی بخواهید هر ردی در استفاده از اپلیکشن زمانه را پاک
+کنید. در این حالت از دکمه «حذف سریع» استفاده کنید. همچنین می‌توانید از
+این دکمه برای از بین بردن کل برنامه استفاده کنید.</string>
+    <string name="help_wipe_button">دکمه «حذف سریع» را امتحان کنید</string>
     <string name="help_share_content">با استفاده از رادیو زمانه اخبار و گزارش‌های برنامه را با دیگران به اشتراک بگذارید. این برنامه امن و ساده است و تنها لازم است دوستی دور و برتان باشد که بلوتوث داشته باشد. این برنامه به شکه وای فای نیاز دارد.</string>
-    <string name="help_data_content">توصیه‌هایی برای کاهش مصرف دیتا: ۱- تنها فیدهایی را که برایستان مهم هستند دربافت کنید. رادیو زمانه به شما امکان می‌دهد که فیدهای شخصی را هم تنظیم کنید. ۲- در بخش تنظیمات خود، گزینه همگام سازی - سینک- هوشمند را انتخاب کنید. این گزینه تنها متن‌ها را سینک می‌کند و امکان لود کردن عکس‌های گزارش را هم به شما می‌دهد. ۳- مقاله‌ها را پس از مدتی حدف کنید. می‌توانید زمانبندی حذف مطالب قدیمی را در بخش تنظیمات فعال کنید.  </string>
+    <string name="help_data_title">به‌حداقل‌رساندن استفاده از دیتا</string>
+    <string name="help_data_content">توصیه‌هایی برای کاهش مصرف دیتا:۱- تنها فیدهایی را که برای شما مهم هستند
+دریافت کنید. رادیو زمانه به شما امکان می‌دهد که فیدهای شخصی را هم تنظیم
+کنید. ۲- در بخش تنظیمات خود، گزینه همگام سازی (سینک) هوشمند را انتخاب
+کنید. این گزینه تنها متن‌ها را سینک می‌کند و امکان لودکردن عکس‌های گزارش
+را هم به شما می‌دهد. ۳- مقاله‌ها را پس از مدتی حذف کنید. می‌توانید
+زمانبندی حذف مطالب قدیمی را در بخش تنظیمات فعال کنید.</string>
     <string name="about_zamaneh_title">درباره پیک</string>
     <string name="about_zamaneh_content">رادیو زمانه از سال ۲۰۰۷ بر بالابردن آگاهی عمومی درباره دموکراسی و حقوق بشر در ایران تمرکز کرده است. ما به دنبال یک جامعه مدنی آگاه، تحصیل‌کرده و قدرتمند هستیم که بتواند برای ایجاد تغییرات اقدام کند و به خشونت و نقض حقوق بشر در ایران پایان دهد.</string>
     <string name="help_terms_content">مجوز نرم افزار و اطلاعات بیشتر به صورت آنلاین در: https://guardianproject.info/apps/ در دسترس است.</string>
     <string name="menu_help">درباره رادیو زمانه</string>
+    <string name="menu_panic">حذف سریع</string>
     <string name="menu_font_size_increase">متن را بلندتر کن</string>
     <string name="menu_font_size_decrease">متن را کوتاه تر کن</string>
     <string name="post_sign_in_info">رادیو زمانه، فیدهای اخبار مهم و قابل توجه جامعه را فراهم می‌کند. هر پستی که به وسیله رادیو زمانه تولید شده باشد، قبل از اینکه در نیورفید رسمی رادیو زمانه منتشر شود، روند گزینش را طی می‌کند. لطفا بخش شرایط و اصول کاری رادیو زمانه را ببینید(درباره رادیو زمانه و شرایط و ضوابط کار) تا از حقوق خود در انتشار اطلاعات در رادیو زمانه آگاه شوید.</string>
@@ -36,5 +53,9 @@
     <string name="pulldown_to_sync">پایین بکش و اخبار را دریافت کن</string>
     <string name="pulldown_to_sync_syncing">دریافت اخبار</string>
     <string name="help_rz_info_title">به آخرین نسخه اپلیکیشن زمانه خوش آمدید!</string>
-    <string name="help_rz_info_content">در ماه‌های گذشته، ما مشغول آماده سازی نسخه جدید اپلیکیشن بوده ایم که شامل امکانات امنیتی بی شماری مثل رمز گذاری دو سویه، ایجاد دکمه حذف اضطراری اپلیکیشن و موارد بسیار دیگری است و در روند برنامه نویسی، بیش از هر چیز به امنیت کاربران و ایجاد یک ارتباط امن فکر کرده ایم. استفاده از این امکانات ممکن است که در موارد اندکی سرعت برنامه را کاهش دهد. بابت این مساله، از شما پوزش می خواهیم و از این که کاربر زمانه هستید به خود می بالیم!</string>
+    <string name="help_rz_info_content">این جدیدترین نسخه اپلیکیشن زمانه است که آماده‌سازی آن کمی طول کشید.
+می‌خواستیم برنامه‌ای به شما عرضه کنیم که هم زیبا و شکیل باشد، هم کاربرد
+آن ساده باشد و هم به ویژه از امکانات ایمنی خوبی برخوردار باشد، امکاناتی
+مثل رمزگذاری دوسویه، ایجاد دکمه «حذف سریع» اپلیکیشن، استفاده از فیلترشکن
+و و مواردی  دیگر.</string>
 </resources>
