--- a/app/src/radioZamaneh/res/values-fa/strings.xml
+++ b/app/src/radioZamaneh/res/values-fa/strings.xml
@@ -58,4 +58,7 @@
 آن ساده باشد و هم به ویژه از امکانات ایمنی خوبی برخوردار باشد، امکاناتی
 مثل رمزگذاری دوسویه، ایجاد دکمه «حذف سریع» اپلیکیشن، استفاده از فیلترشکن
 و و مواردی  دیگر.</string>
+    <string name="panic_settings">تنظیمات حذف سریع</string>
+    <string name="settings_heading_panic_action">حذف سریع</string>
+    <string name="settings_panic_action_info">لطفا عملیات پیش‌فرض برای حذف سریع را انتخاب کنید</string>
 </resources>
